Alignment issues fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -47,7 +47,7 @@ h1{
 }
 
 .quiz-body{
-    
+    margin: 0 auto;
     width: fit-content;
     
 }
